--- a/db/families.yaml
+++ b/db/families.yaml
@@ -947,6 +947,32 @@ families:
     - person: eisaku-sato
       generation: 1
       role: co-founder (brother)
+  koc:
+    origin: TUR
+    founder: vehbi-koc
+    sector: conglomerate-automotive-energy
+    generations: 4
+    status: active
+    note: Richest family in Turkey, Koc Holding = 7% Turkish GDP
+    members:
+    - person: suna-kirac
+      generation: 2
+    - person: omer-koc
+      generation: 3
+    - person: mustafa-koc
+      generation: 3
+    - person: rahmi-koc
+      generation: 2
+      role: patriarch
+    - person: vehbi-koc
+      generation: 1
+      role: founder
+    - person: ali-koc
+      generation: 3
+    - person: ipek-kirac
+      generation: 4
+    - person: semahat-arsel
+      generation: 2
   koc-family:
     origin: TUR
     founder: vehbi-koc
@@ -1636,6 +1662,18 @@ families:
     - person: guler-sabanci
       generation: 3
       role: heir
+  sahenk:
+    origin: TUR
+    founder: ayhan-sahenk
+    sector: construction, banking, hospitality
+    status: active
+    members:
+    - person: ferit-sahenk
+      generation: 2
+      role: heir
+    - person: ayhan-sahenk
+      generation: 1
+      role: founder
   salim:
     origin: Indonesia
     founder: sudono-salim
